_sass/pages/_projects.scss
@use '../abstracts/variables' as v;
@use '../abstracts/placeholders';
@use '../abstracts/breakpoints' as bp;

.projects {
  li {
    border: 0;
  }

  .card-title {
    color: var(--text-color);
  }

  .card-text {
    color: var(--text-muted-color);
    margin-bottom: 1rem;

    &:has(+ .project-misc) {
      padding-bottom: 1rem;
    }

    &.project-tag {
      text-align: end;
    }
  }

  .project-topics {
    color: var(--text-muted-color);
  }

  .project-misc {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
    color: var(--text-color);
  }

  .project-tools {
    justify-items: start;

    span {
      padding: 0.4rem 0.5rem;
      border-radius: 0.75rem;
    }

    span * {
      color: var(--sidebar-active-color);
    }

    i {
      font-size: 86%;
    }
  }

  .project-links {
    flex-direction: column;
    align-items: end;

    li {
      padding: 0;
    }

    a > i {
      color: grey;
    }
  }

  .card {
    margin-bottom: 2rem;
    border-color: var(--categories-border);
    background-color: var(--card-bg);

    &.card,
    .list-group {
      @extend %rounded;
    }

    .card-header {
      $radius: calc(v.$radius-lg - 1px);

      padding: 0.75rem;
      border-radius: $radius;
      border-bottom: 0;

      &.hide-border-bottom {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
      }
    }

    .list-group-item {
      border-left: none;
      border-right: none;
      padding-left: 2rem;

      &:first-child {
        border-top-left-radius: 0;
        border-top-right-radius: 0;
      }

      &:last-child {
        border-bottom: 0;
      }
    }

    .popup.img-link {
      margin: 0;
    }

    .row > div:has(> .popup) {
      > .popup {
        @extend %rounded;

        img {
          @extend %rounded;
        }
      }

      &:first-child {
        @include bp.md {
          > .popup {
            border-top-right-radius: 0 !important;
            border-bottom-right-radius: 0 !important;

            img {
              border-top-right-radius: 0 !important;
              border-bottom-right-radius: 0 !important;
            }
          }
        }
      }

      &:last-child {
        @include bp.md {
          > .popup {
            border-top-left-radius: 0 !important;
            border-bottom-left-radius: 0 !important;

            img {
              border-top-left-radius: 0 !important;
              border-bottom-left-radius: 0 !important;
            }
          }
        }
      }

      @include bp.lte(bp.get(md)) {
        text-align: center;
      }
    }
  }

  .row .popup {
    @include bp.md {
      aspect-ratio: 40 / 21;
      width: 100%;
      height: 100%;
      overflow: hidden;

      &:not(.no-bg) {
        background: var(--img-bg);
      }

      img {
        width: 100%;
        height: 100%;
        -o-object-fit: cover;
        object-fit: cover;

        @at-root #post-list & {
          width: 100%;
        }
      }
    }
  }
}

html {
  @media (prefers-color-scheme: light) {
    &:not([data-mode]),
    &[data-mode='light'] {
      .project-tools span {
        background-color: rgb(116, 178, 243);
      }
    }

    &[data-mode='dark'] {
      .project-tools span {
        background-color: rgb(248, 138, 156);
      }
    }
  }

  @media (prefers-color-scheme: dark) {
    &:not([data-mode]),
    &[data-mode='dark'] {
      .project-tools span {
        background-color: rgb(248, 138, 156);
      }
    }

    &[data-mode='light'] {
      .project-tools span {
        background-color: rgb(116, 178, 243);
      }
    }
  }
}

